objects/tfn_Ecological_Vegetation_Class__c.object
<CustomObject>
    <fields>
        <fullName>tfn_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_BCS__c</fullName>
        <inlineHelpText>Conservation Status</inlineHelpText>
        <label>BCS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Bioregion_No__c</fullName>
        <label>Bioregion No.</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Bioregion__c</fullName>
        <label>Bioregion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Description__c</fullName>
        <label>EVC Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Group_Name_MajorAsset__c</fullName>
        <inlineHelpText>EVC Group Name</inlineHelpText>
        <label>EVC Group Name (Major Asset Category)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Group_No__c</fullName>
        <label>EVC Group No.</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>EVC Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Modified_Area_Hectares__c</fullName>
        <label>EVC Modified Area (Hectares)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Number__c</fullName>
        <label>EVC Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Official_Name__c</fullName>
        <label>EVC Name (Official)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Protected_Area_Hectares__c</fullName>
        <label>EVC Protected Area (Hectares)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Sub_Group_Name__c</fullName>
        <label>EVC Sub-Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Total_Area_Hectares__c</fullName>
        <label>EVC Total Area (Hectares)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Veg_Quality__c</fullName>
        <label>Vegetation Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ecological Vegetation Class</label>
    <nameField>
        <label>EVC Salesforce Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ecological Vegetation Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>